--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "webpack": "^5.101.3",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
+  },
+  "dependencies": {
+    "swapy": "^1.0.5"
   }
 }
